Portfolio Website/src/App.scss
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.bg-image {
    z-index: -1;
    position: absolute;
    height: 100%;
    width: 100%;
    background-image: url('assets/su-san-lee-E_eWwM29wfU-unsplash\(2\).jpg');
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    filter:brightness(60%)
}

.main-container {
    height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: row;
    font-family: 'Courier New', Courier, monospace;
}

.footer {
    background: #111;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 5vh;
    text-align: center;
    color: #00ccff;
    font-size: .95rem;
    font-family: 'Courier New', Courier, monospace;
}

@keyframes fadeIn {
    0% {
        transform: translateY(100%);
        opacity: 0;
    }
    100% {
        transform: translateY(0%);
        opacity: 1;
    }
}

.item-container {
    display: flex;
    flex-direction: column;
    width: 60vw;
    height: 60vh;
    margin-top: 6vh;
    color: #fff;
}
.main-text {
    font-size: 4.5rem;
    animation: fadeIn 1.5s;
    letter-spacing: -3px;
    width: 30vw;
}
.main-text2 {
    margin-top: 70px;
    letter-spacing: 0px;
    font-size: 2rem;
    animation: fadeIn 1.2s 1s both;
    color: #fff;
}
.projects-button {
    margin-top: 30px;
    height: 25px;
    width: 10vw;
}

.nav-container{
    z-index: 3;
    position: fixed;
    height: 7vh;
    width: 100vw;
    display: flex;
    justify-content: center;
    background: #111;
}
.nav-bar {
    z-index: 3;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    width: 50vw;
    display: flex;
    justify-content: space-around;
    list-style: none;
    font-size: 1.1rem;
    color: #fff;
    font-weight: bolder; 
    align-items: center;
}

.nav-bar li:hover {
    border-bottom: #fff solid 1px;
    cursor: pointer;
}
.logo-container {
    width: 60vw;
    display: flex;
    align-items: center;
}
.logo {
    padding-left: 50px;
    display: flex;
    justify-content: left;
    align-items: center;
    width: 50vw;
    height: 45px;
    font-size: 1.8rem;
    color: white;
    font-family: 'Courier New', Courier, monospace;
    font-weight: bolder;
}
.logo:hover {
    cursor: pointer;
}
.about-section-container{
    font-family: 'Courier New', Courier, monospace;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100vh;
    background: #222;
}
.about-section {
    font-family: 'Courier New', Courier, monospace;
    display: grid;
    grid-template-columns: 25vw 25vw 25vw;
    grid-template-rows: auto;
    color: white;
    font-size: .8rem;
    column-gap: 50px;
    row-gap: 20px;
    color: #c7c7c7;;
}
.item-1 {
    color: #00ccff;
    font-style: italic;
    grid-row: 1/2;
    grid-column: 1/2;
    font-size: 2rem;
    padding-bottom: 10px;
    border-bottom: solid 1px #c7c7c7;
}
.item-2 {
    grid-row: 2/3;
    grid-column: 1/2;
    font-size: 1.2rem;
}
.item-3 {
    color: #00ccff;
    font-style: italic;
    font-size: 2rem;
    grid-row: 1/2;
    grid-column: 2/3;
    padding-bottom: 10px;
    border-bottom: solid 1px #c7c7c7;
}
.item-4 {
    grid-row: 2/3;
    grid-column: 2/3;
    font-size: 1.2rem;
}
.item-5 {
    color: #00ccff;
    font-style: italic;
    font-size: 2rem;
    grid-row: 1/2;
    grid-column: 3/4;
    padding-bottom: 10px;
    border-bottom: solid 1px white;
}
.item-6 {
    grid-row: 2/3;
    grid-column: 3/4;
    font-size: 1.2rem;
}
.project-section{
    padding-top: 20vh;
    z-index: -3;
    min-height: 180vh;
    background: #111;
}

#project-item {
    z-index: 1;
    box-shadow: 4px 4px 5px #00ccff;
    min-width: 40vw;
    max-height: 40vh;
    border-radius: 15px;
    filter: brightness(90%);
}

.project-info {
    font-family: 'Courier New', Courier, monospace;
    color: #fff;
    margin-top: 20px;
    font-size: 1.3rem;
    text-align: center;
}
.projects {
    z-index: 2;
    justify-content: center;
    display: flex;
    flex-wrap: wrap;
    gap: 30px;
    height: 90vh;
    align-items: center;
}
a:link {
    color: white;
}
a:visited {
    color: white;
}
a:hover {
    color: #00ccff;
}
.image-1{
    filter:brightness(90%);
    content:url(../src/assets/calc.png);
}
.image-2 {
    content:url(../src/assets/library.png);
}
.image-3 {
    content:url(../src/assets/sketch.png);
}
.image-4 {
    content:url(../src/assets/tic.png);
}
.image-5 {
    content:url(../src/assets/memory.png);
}

.tech-container {
    background: #111;
    display: block;
    min-height: 100vh;
    width: 100vw;
    color: #fff;
    display: flex;
    justify-content: center;
    align-items: center;
}

.technologies {
    margin-top: 40px;
    height: 30vh;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 40px;
    width: 90vw;
    border-radius: 10px;
    padding: 20px;
}
.tech-text {
    letter-spacing: 2px;
    padding-top: 20vh;
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    display: flex;
    align-items: center;
    justify-content: center;
    color: white;
    background: #111;
    font-size: 2.5rem;
    font-weight: lighter;
}
.technologies > * {
    font-family: 'Courier New', Courier, monospace;
    cursor: pointer;
    margin-top: 5vh;
    width: 80px;
    height: 80px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}
#technologies {
    width: 80px;
    height: 80px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover; 
}
.label {
    font-family: 'Courier New', Courier, monospace;
    font-size: 1rem;
    margin-top: 5px;
    text-align: center;
    color: #00ccff;
}
.tech-1 {
    background-image: url(../src/assets/icons/html-5-svgrepo-com.svg);
}
.tech-2 {
    background-image: url(../src/assets/icons/css-3-svgrepo-com.svg);
}
.tech-3 {
    background-image: url(../src/assets/icons/javascript-svgrepo-com.svg);
}
.tech-4 {
    background-image: url(../src/assets/icons/react-svgrepo-com.svg);
}
.tech-5 {
    background-image: url(../src/assets/icons/scss2-svgrepo-com.svg);
}
.tech-6 {
    background-image: url(../src/assets/icons/git-svgrepo-com.svg);
}
.tech-7 {
    background-image: url(../src/assets/icons/macos-svgrepo-com.svg);
}
.tech-8 {
    background-image: url(../src/assets/icons/typescript-official-svgrepo-com.svg);
}
.tech-9 {
    background-image: url(../src/assets/icons/ruby-svgrepo-com.svg);
}
.tech-10 {
    background-image: url(../src/assets/icons/linux-svgrepo-com.svg);
}
.tech-11 {
    background-image: url(../src/assets/icons/wordpress-139-svgrepo-com.svg);
}
.tech-12 {
    background-image: url(../src/assets/icons/windows-svgrepo-com.svg);
}
.tech-13 {
    background-image: url(../src/assets/icons/vscode-svgrepo-com.svg);
}

.contact-section-container {
    height: 25vh;
    background-color: #222;
}
.contact-section {
    display: flex;
    justify-content: center;
    gap: 20px;
}
.contact-section > * {
    margin-top: 5vh;
}
.contact-text {
    font-family: 'Courier New', Courier, monospace;
    font-size: 2rem;
    color: #00ccff;
    text-align: center;
}
.contact-1 {
    background: url(../src/assets/icons/email-1573-svgrepo-com.svg);
    width: 70px;
    height: 70px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}
.contact-2 {
    background: url(../src/assets/icons/github-142-svgrepo-com.svg);
    width: 70px;
    height: 70px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}
.contact-3 {
    background: url('../src/assets/icons/linkedin-linked-in-svgrepo-com\(1\).svg');
    width: 70px;
    height: 70px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}


@media only screen and (max-width: 320px) {
    .main-text {
        font-size: 1.7rem;
    }
    .main-text2 {
        font-size: 1.4rem;
    }
    .logo {
        font-size: .9rem;
    }
    .nav-bar {
        justify-content: right;
        font-size: .6rem;
        gap: 5px;
    }
}

